// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<div>
  <style>
    .search-controlled-form {
          display: flex;
          flex-direction: column;
          gap: var(--ds-size-3);
        }
        .search-controlled-chip__group {
          display: flex;
          align-items: center;
          gap: var(--ds-size-3);
        }
  </style>
  <form>
    <ds-suggestion>
      <input
        id="<removed>"
        aria-label="Søk"
        type="text"
        value
      >
      <button
        data-variant="tertiary"
        type="reset"
        aria-label="Tøm"
        aria-hidden="false"
        hidden
        tabindex="-1"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </ds-suggestion>
    <div>
      <p data-size="sm">
        Hurtigsøk:
      </p>
      <button type="button">
        Læreplaner
      </button>
      <button type="button">
        Skole
      </button>
      <button type="button">
        Eksamen
      </button>
    </div>
  </form>
</div>
`;

exports[`Form 1`] = `
<div>
  <form>
    <ds-suggestion>
      <input
        aria-label="Søk"
        type="text"
      >
      <button
        data-variant="tertiary"
        type="reset"
        aria-label="Tøm"
        aria-hidden="false"
        hidden
        tabindex="-1"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </ds-suggestion>
  </form>
</div>
`;

exports[`Live Search 1`] = `
<style>
  .search-live-output__group {
          display: flex;
          gap: var(--ds-size-1);
          align-items: center;
        }
</style>
<div>
  <ds-suggestion>
    <input
      aria-label="Søk"
      type="search"
      value
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
  </ds-suggestion>
</div>
`;

exports[`Preview 1`] = `
<form>
  <ds-suggestion>
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
</form>
`;

exports[`Variants 1`] = `
<div>
  <ds-suggestion>
    <input
      aria-label="Søk"
      type="search"
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
  </ds-suggestion>
  <ds-suggestion>
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
  <ds-suggestion>
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </ds-suggestion>
</div>
`;

exports[`With Label 1`] = `
<ds-field>
  <label for="<removed>">
    Søk i læreplaner
  </label>
  <ds-suggestion>
    <input
      type="text"
      name="cat-search"
      id="<removed>"
    >
    <button
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
</ds-field>
`;
